# specter-desktop

./: .README.md.swp  .cirrus.yml  .dockerignore  .env_example  .flaskenv  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  .travis.yml  .worktreeinclude  AGENTS.md  BOUNTY-2335-SOLUTION.md  BOUNTY-2343-SOLUTION.md  CONTRIBUTING.md  DEVELOPMENT.md  Dockerfile  LICENSE  MANIFEST.in  README.md  SOLUTION.md  bla  blub  cypress.json  cypress_basics.json  gulpfile.js  mkdocs.yml  package-lock.json  package.json  pyproject.toml  pytest.ini  requirements.in  requirements.txt  rpc.py  rpctest.py  run.sh  server.py  server.spec  setup.cfg  setup.py  specter.py  (+3 more)
babel/: README.md  babel.cfg  messages.pot
docker/: .auth.env_sample  .gitignore  Makefile  Readme.md  bitcoin.conf  docker-compose.yml
docs/: API.md  DeviceCreationGuide.md  WalletCreationGuide.md  about.md  api.md  archblog.md  architecture.md  build-instructions.md  ci-migration-evidence.md  cirrus-replacement-spec.md  connect-your-node.md  continuous-integration.md  contributing.md  cypress-testing.md  daemon.md  development.md  elements.md  endless-pacman.md  extensions.md  faq.md  gen-certificate.sh  gitlab-integration.md  hwibridge.md  install_guide.md  multisig-guide.md  multisig-security-tradeoffs.md  performance.md  release-guide.md  release-notes.md  release_notes.md  reverse-proxy.md  self-signed-certificates.md  sign-message.md  specterd.service  test-new-releases.md  tor.md  travis-ci-abuse-detection.md  windows.md
netlify/: hack.sh
nwjs_app/: index.html  index.js  package.json
pyinstaller/: README.md  build-ci.sh  build-common.sh  build-osx.sh  build-unix.sh  build-win-ci.bat  build-win.bat  hwibridge.py  hwibridge.spec  hwibridge_onedir.spec  requirements.in  requirements.txt  requirements_additional.txt  specter-desktop.iss  specter_desktop.py  specter_desktop.spec  specterd.py  specterd.spec  specterd_onedir.spec
src/: helpers.py  rpc.py  server.py  specter.py
static/: styles.css
templates/: base.html  hwi_new_device_xpubs.html  new_device.html  new_device_xpubs.html  new_simple.html  new_simple_keys.html  settings.html  wallet_receive.html  wallet_send.html  wallet_settings.html  wallet_tx.html
tests/: bitcoin_SHA256SUMS  bitcoin_comp_layer.py  conftest.py  fix_hwi.py  (+98 more)
tests/xtestdata_testextensions/ext_root_fully_qualified_2/: MANIFEST.in  pyproject.toml  requirements.txt  setup.cfg
tests/xtestdata_testextensions/ext_root_fully_qualified_2/src/boatacccorp/specterext/ruderboot/: controller.py  service.py
tests/xtestdata_testextensions/ext_root_fully_qualified_2/src/boatacccorp/specterext/ruderboot/templates/ruderboot/: index.jinja  settings.jinja
tests/xtestdata_testextensions/ext_root_fully_qualified_2/src/boatacccorp/specterext/ruderboot/templates/ruderboot/components/: ruderboot_menu.jinja  ruderboot_tab.jinja
tests/xtestdata_testextensions/ext_root_fully_qualified_2/src/boatacccorp/spext/ruderboot/: service.py
tests/xtestdata_testextensions/ext_root_fully_qualified_2/tests/: conftest.py
(+977 files in other folders)
