[metadata]
name = boatacccorp_ruderboot
version = 0.0.1
author = Your Name
author_email = some_mail@mail.com
description = A small example package
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/boatacccorp/spex-ruderboot
project_urls =
    Bug Tracker = https://github.com/pypa/sampleproject/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find_namespace:
python_requires = >=3.6

[options.packages.find]
where = src
